--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://mysql:3306/doctordb
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/doctordb
     username: root
     password: ENSA2023
     driverClassName: com.mysql.cj.jdbc.Driver
