--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,3 +42,6 @@ application:
       refresh-token:
         expiration: 604800000 # 7 days
 
+microservice:
+  patient: http://patient-service-svc/product/
+  consultation: http://consultation-service-svc/payment/
