--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -34,3 +34,15 @@ spec:
   ports:
     - port: 80
       targetPort: 8084
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: doctor-service-svc
+spec:
+  type: LoadBalancer
+  selector:
+    app:
+  ports:
+    - port: 80
+      targetPort: 8084
