--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -8,20 +8,20 @@ spec:
       app: doctor-service-app
   template:
     metadata:
-      labels:
-        app: doctor-service-app
-    spec:
-      containers:
-        - name: doctor-service-app
-          image: IMAGE_URL/doctorservice
-          ports:
-            - containerPort: 8084
-          env:
-            - name: DB_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: mysql-cm
-                  key: hostname
+    labels:
+      app: doctor-service-app
+  spec:
+    containers:
+      - name: doctor-service-app
+        image: IMAGE_URL/doctorservice
+        ports:
+          - containerPort: 8084
+        env:
+          - name: DB_HOST
+            valueFrom:
+              configMapKeyRef:
+                name: mysql-cm
+                key: hostname
 
 ---
 apiVersion: v1
@@ -29,10 +29,9 @@ kind: Service
 metadata:
   name: doctor-service-svc
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: doctor-service-app
   ports:
-    - port: 80
+    - port: 8084
       targetPort: 8084
----
