--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -14,6 +14,13 @@ spec:
       containers:
         - name: doctor-service-app
           image: IMAGE_URL/doctorservice
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
           ports:
             - containerPort: 8084
           env:
