--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -18,9 +18,7 @@ spec:
             requests:
               cpu: 100m
               memory: 128Mi
-            limits:
-              cpu: 500m
-              memory: 512Mi
+
           ports:
             - containerPort: 8084
           env:
@@ -29,6 +27,10 @@ spec:
                 configMapKeyRef:
                   name: mysql-cm
                   key: hostname
+      initContainers:
+        - name: install-openjdk
+          image: adoptopenjdk/openjdk17:latest
+          command: [ "sh", "-c", "apt-get update && apt-get install -y openjdk-17-jdk" ]
 
 ---
 apiVersion: v1
