--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>Doctor</name>
 	<description>Doctor microservice </description>
 	<properties>
-		<java.version>16</java.version>
+		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.2</spring-cloud.version>
 	</properties>
 	<dependencies>
@@ -213,6 +213,15 @@
 					</to>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>${java.version}</release>
+				</configuration>
+			</plugin>
+			<!-- Other plugins -->
 
 		</plugins>
 	</build>
