--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 8084
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/doctordb
+    url: jdbc:mysql://mysql:3306/doctordb
     username: root
     password: ENSA2023
     driverClassName: com.mysql.cj.jdbc.Driver
