--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -23,10 +23,7 @@ spec:
             - containerPort: 8084
           env:
             - name: DB_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: mysql-cm
-                  key: hostname
+              value: mysql
 
 
 ---
