--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+
 kind: Deployment
 metadata:
   name: doctor-service-app
@@ -12,24 +12,21 @@ spec:
         app: doctor-service-app
     spec:
       containers:
-        - name: doctor-service-app
+        - name: order-service-app
           image: IMAGE_URL/doctorservice
-          resources:
-            requests:
-              cpu: 100m
-              memory: 128Mi
-
+          imagePullPolicy: Always
           ports:
             - containerPort: 8084
           env:
+
             - name: DB_HOST
               valueFrom:
                 configMapKeyRef:
                   name: mysql-cm
                   key: hostname
 
-
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
