--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -1,4 +1,4 @@
-
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: doctor-service-app
@@ -12,7 +12,7 @@ spec:
         app: doctor-service-app
     spec:
       containers:
-        - name: order-service-app
+        - name: doctor-service-app
           image: IMAGE_URL/doctorservice
           imagePullPolicy: Always
           ports:
@@ -24,6 +24,7 @@ spec:
                 configMapKeyRef:
                   name: mysql-cm
                   key: hostname
+
 
 ---
 
